# hatchery-core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  docs.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
content/docs/: cookbook.mdx  index.mdx  meta.json  pricing.mdx
content/docs/cookbook/: custom-loss.mdx  meta.json  rl-loop.mdx  save-resume.mdx  sft-quickstart.mdx
content/docs/development/: extending.mdx  meta.json  testing.mdx
content/docs/getting-started/: deployment.mdx  meta.json  quickstart.mdx  self-hosting.mdx  tinker-migration.mdx
content/docs/learn/: architecture.mdx  meta.json  open-core.mdx
content/docs/reference/: endpoints.mdx  meta.json
docs-site/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  source.config.ts
docs-site/app/(home)/: page.tsx
docs-site/components/: provider.tsx
docs-site/lib/: layout.shared.tsx  shared.ts
hatchery/: __init__.py
hatchery/core/: _peft_compat.py  batching.py  client.py  config.py  dflash_integration.py  discovery.py  distributed.py  errors.py  fused_losses.py  gateway.py  local_dev.py  lora_state.py  lora_target_modules.py  losses.py  model_pool.py  model_registry.py  optim_dispatch.py  optimizer_state.py  packing.py  parallel.py  parallel_hooks.py  plugins.py  precision.py  protocols.py  quantization.py  sampling.py  scattermoe_kernel.py  scheduler.py  session_registry.py  session_store.py  spec_decoding.py  stub_worker.py  tinker_compat.py  torchao_runtime.py  trainer.py  unified.py  usage.py  worker.py
hatchery/core/backends/auth/: api_key.py
hatchery/core/backends/compute/: local.py
hatchery/core/backends/metadata/: memory.py  sqlite.py
hatchery/core/backends/metrics/: log.py
hatchery/core/backends/object_store/: local.py  memory.py
hatchery/core/backends/queue/: memory.py  sqlite.py
hatchery/core/examples/: loss_plugin_example.py  train_pirate_style.py  train_sft.py
hatchery/core/scripts/: run_local_dev.sh  run_worker.sh
packaging/venvstacks/: README.md  venvstacks.toml
packaging/venvstacks/launch/: hatchery_gateway.py  hatchery_local_dev.py  hatchery_worker.py
packaging/venvstacks/requirements/app-hatchery-gateway/: packages-app-hatchery-gateway-linux_x86_64.txt  requirements-app-hatchery-gateway-linux_x86_64.txt.json
packaging/venvstacks/requirements/app-hatchery-local-dev/: packages-app-hatchery-local-dev-linux_x86_64.txt  requirements-app-hatchery-local-dev-linux_x86_64.in  requirements-app-hatchery-local-dev-linux_x86_64.txt  requirements-app-hatchery-local-dev-linux_x86_64.txt.json
packaging/venvstacks/requirements/app-hatchery-worker/: packages-app-hatchery-worker-linux_x86_64.txt  requirements-app-hatchery-worker-linux_x86_64.txt.json
packaging/venvstacks/requirements/cpython-3.12/: packages-cpython-3.12-linux_x86_64.txt  requirements-cpython-3.12-linux_x86_64.txt.json
packaging/venvstacks/requirements/framework-hatchery-ml/: packages-framework-hatchery-ml-linux_x86_64.txt  requirements-framework-hatchery-ml-linux_x86_64.in  requirements-framework-hatchery-ml-linux_x86_64.txt  requirements-framework-hatchery-ml-linux_x86_64.txt.json
tests/: conftest.py  test_auth.py  test_batching.py  test_boundary.py  test_compression_middleware.py  test_dflash_integration.py  test_discovery.py  test_distributed_runtime.py  test_end_to_end.py  test_gateway.py  test_gzip_middleware.py  test_image_asset_pointer.py  test_in_process_sampler.py  test_lora_target_modules.py  test_lr_per_step.py  test_metadata.py  test_model_pool.py  test_model_registry.py  test_msgpack_middleware.py  test_object_store.py  test_optim_dispatch.py  test_packing.py  test_parallel_config.py  test_pipelining.py  test_quantization.py  test_queue.py  test_real_http_roundtrip.py  test_run_worker_script.py  test_sampling.py  test_sampling_idempotency.py  test_scattermoe_kernel.py  test_session_store.py  test_sparse_tensor.py  test_spec_decoding_request.py  test_tinker_compat.py  test_tinker_sdk_contract.py  test_torchao_runtime.py  test_train_sft_example.py  test_trainer_fsdp2_dp.py  test_trainer_full_param.py  (+4 more)
tests/torch_distributed/: test_fsdp2_generate_registration.py  test_fsdp2_smoke.py
tests/torch_distributed/scripts/: fsdp2_smoke.py  trainer_fsdp2_smoke.py
tests/torch_tests/: test_fused_losses.py  test_loss_registry.py  test_losses.py  test_multi_gpu_smoke.py  test_multi_lora_shapes.py  test_optimizer_state.py  test_orpo.py  test_precision.py  test_vlm_e2e.py  test_worker_cpu.py  test_worker_gpu.py
